--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 aiogram==3.11.0
+openai
 langchain
 langchain-community
 langchain-huggingface
 qdrant-client
-dashscope
 PyPDF2
 unstructured[local-inference]
 python-dotenv
